# AshCoin

./: .gitignore  .gitmodules  CMakeLists.txt  LICENSE.txt  README.md  TransactionResult.h  conanfile.py  index.md  test-config.h.in
.github/workflows/: cmake.yml  macos.yml  ubuntu.yml  windows.yml
CMake/: ZCompileResource.cmake  conan.cmake
doc/: bookmarks.md  testing.md  whitepaper.tex
docs/: api.md  bookmarks.md  index.md  settings.md  test-wallets.md  testing.md
src/: AshDb.cpp  AshDb.h  AshLogger.cpp  AshLogger.h  AshUtils.cpp  Block.cpp  Block.h  BlockChain.cpp  BlockChain.h  BlockInfo.h  Blockchain.cpp  Blockchain.h  CMakeLists.txt  ChainDatabase.cpp  ChainDatabase.h  ComputerID.h  ComputerIDMac.cpp  ComputerIDPosix.cpp  ComputerIDWindows.cpp  ComputerUUID.h  ComputerUUIDMac.cpp  ComputerUUIDPosix.cpp  CryptoUtils.cpp  CryptoUtils.h  IChainDatabase.h  Miner.h  MinerApp.cpp  MinerApp.h  PeerManager.cpp  PeerManager.h  ProblemDetails.h  Settings.cpp  Settings.h  Transactions.cpp  Transactions.h  core.h  main.cpp  settings.json  sha256.cpp  testapp.cpp  (+2 more)
src/html/: address.html  balance.html  block.html  common.js  createTx.html  createtx.html  footer.html  header.html  index.html  style.css  tx.html
tests/: CMakeLists.txt  Test.h  TestBlock.cpp  test_block.cpp  test_blockchain.cpp  test_crypto.cpp  test_db.cpp  test_merkleroot.cpp
tests/data/: blockchain1.json  blockchain4.json
tests/tools/: websocket-test.html
